# clipboard-sync

./: .gitignore  AGENTS.md  README.md
docs/: architecture.md  roadmap.md  supabase-schema.md  supabase-setup.md  supabase-verification.md
ios/: README.md
supabase/: seed.sql
supabase/migrations/: 0001_initial_schema.sql
windows/: README.md  pyproject.toml
windows/clipboard_sync/: __init__.py  cli.py  clipboard.py  config.py  state.py  supabase_client.py
windows/tests/: test_state.py  test_supabase_client.py
